crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D415_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:355:5
    |
353 |         "or exclamation point (not 'y')")
354 | def lwnlkjl():
355 |     """Summary"""
    |     ^^^^^^^^^^^^^
help: Add closing punctuation
    |
355 |     """Summary."""
    |               +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:406:25
    |
404 | @expect("D415: First line should end with a period, question mark,"
405 |         " or exclamation point (not 'r')")
406 | def oneliner_withdoc(): """One liner"""
    |                         ^^^^^^^^^^^^^^^
help: Add closing punctuation
    |
406 | def oneliner_withdoc(): """One liner."""
    |                                     +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:410:5
    |
409 | def ignored_decorator(func):   # noqa: D400,D401,D415
410 |     """Runs something"""
    |     ^^^^^^^^^^^^^^^^^^^^
411 |     func()
412 |     pass
    |
help: Add closing punctuation
    |
410 |     """Runs something."""
    |                      +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:416:5
    |
415 | def decorator_for_test(func):   # noqa: D400,D401,D415
416 |     """Runs something"""
    |     ^^^^^^^^^^^^^^^^^^^^
417 |     func()
418 |     pass
    |
help: Add closing punctuation
    |
416 |     """Runs something."""
    |                      +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:422:35
    |
421 | @ignored_decorator
422 | def oneliner_ignored_decorator(): """One liner"""
    |                                   ^^^^^^^^^^^^^^^
help: Add closing punctuation
    |
422 | def oneliner_ignored_decorator(): """One liner."""
    |                                               +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:429:49
    |
427 | @expect("D415: First line should end with a period, question mark,"
428 |         " or exclamation point (not 'r')")
429 | def oneliner_with_decorator_expecting_errors(): """One liner"""
    |                                                 ^^^^^^^^^^^^^^^
help: Add closing punctuation
    |
429 | def oneliner_with_decorator_expecting_errors(): """One liner."""
    |                                                             +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:470:5
    |
468 |         "or exclamation point (not 'g')")
469 | def docstring_bad():
470 |     """Runs something"""
    |     ^^^^^^^^^^^^^^^^^^^^
471 |     pass
    |
help: Add closing punctuation
    |
470 |     """Runs something."""
    |                      +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:475:5
    |
474 | def docstring_bad_ignore_all():  # noqa
475 |     """Runs something"""
    |     ^^^^^^^^^^^^^^^^^^^^
476 |     pass
    |
help: Add closing punctuation
    |
475 |     """Runs something."""
    |                      +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:480:5
    |
479 | def docstring_bad_ignore_one():  # noqa: D400,D401,D415
480 |     """Runs something"""
    |     ^^^^^^^^^^^^^^^^^^^^
481 |     pass
    |
help: Add closing punctuation
    |
480 |     """Runs something."""
    |                      +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:487:5
    |
485 |         "(perhaps 'Run', not 'Runs')")
486 | def docstring_ignore_some_violations_but_catch_D401():  # noqa: E501,D400,D415
487 |     """Runs something"""
    |     ^^^^^^^^^^^^^^^^^^^^
488 |     pass
    |
help: Add closing punctuation
    |
487 |     """Runs something."""
    |                      +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:520:5
    |
518 |         "or exclamation point (not 'g')")
519 | def bad_google_string():  # noqa: D400
520 |     """Test a valid something"""
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Add closing punctuation
    |
520 |     """Test a valid something."""
    |                              +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:581:5
    |
579 |         "or exclamation point (not '\"')")
580 | def endswith_quote():
581 |     """Whitespace at the end, but also a quote" """
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Add closing punctuation
    |
581 |     """Whitespace at the end, but also a quote". """
    |                                                +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:615:5
    |
613 |   @expect('D212: Multi-line docstring summary should start at the first line')
614 |   def one_liner():
615 | /     """Wrong."
616 | |
617 | |     """
    | |_______^
help: Add closing punctuation
    |
615 |     """Wrong.".
    |               +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:639:17
    |
639 | class SameLine: """This is a docstring on the same line"""
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
640 |
641 | def same_line(): """This is a docstring on the same line"""
    |
help: Add closing punctuation
    |
639 | class SameLine: """This is a docstring on the same line."""
    |                                                        +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:641:18
    |
639 | class SameLine: """This is a docstring on the same line"""
640 |
641 | def same_line(): """This is a docstring on the same line"""
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Add closing punctuation
    |
641 | def same_line(): """This is a docstring on the same line."""
    |                                                         +
note: This is an unsafe fix and may change runtime behavior

D415 [*] First line should end with a period, question mark, or exclamation point
   --> D.py:664:5
    |
663 |   def newline_after_closing_quote(self):
664 | /     "We enforce a newline after the closing quote for a multi-line docstring \
665 | |     but continuations shouldn't be considered multi-line"
    | |_________________________________________________________^
help: Add closing punctuation
    |
665 |     but continuations shouldn't be considered multi-line."
    |                                                         +
note: This is an unsafe fix and may change runtime behavior
