crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D417_sections.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D417 Missing argument description in the docstring for `bar`: `y`
   --> sections.py:292:9
    |
292 |     def bar(y=2):  # noqa: D207, D213, D406, D407
    |         ^^^
    |

D417 Missing argument description in the docstring for `test_missing_google_args`: `y`
   --> sections.py:309:5
    |
309 | def test_missing_google_args(x=1, y=2, _private=3):  # noqa: D406, D407
    |     ^^^^^^^^^^^^^^^^^^^^^^^^
    |

D417 Missing argument descriptions in the docstring for `test_missing_args`: `test`, `y`, `z`
   --> sections.py:333:9
    |
333 |     def test_missing_args(self, test, x, y, z=3, _private_arg=3):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^
    |

D417 Missing argument descriptions in the docstring for `test_missing_args_class_method`: `test`, `y`, `z`
   --> sections.py:345:9
    |
345 |     def test_missing_args_class_method(cls, test, x, y, _, z=3):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |

D417 Missing argument descriptions in the docstring for `test_missing_args_static_method`: `a`, `y`, `z`
   --> sections.py:358:9
    |
358 |     def test_missing_args_static_method(a, x, y, _test, z=3):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |

D417 Missing argument descriptions in the docstring for `test_missing_docstring`: `a`, `b`
   --> sections.py:370:9
    |
370 |     def test_missing_docstring(a, b):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^^
    |

D417 Missing argument description in the docstring for `test_missing_numpy_args`: `y`
   --> sections.py:398:5
    |
398 | def test_missing_numpy_args(_private_arg=0, x=1, y=2):  # noqa: D406, D407
    |     ^^^^^^^^^^^^^^^^^^^^^^^
    |

D417 Missing argument descriptions in the docstring for `test_missing_args`: `test`, `y`, `z`
   --> sections.py:434:9
    |
434 |     def test_missing_args(self, test, x, y, z=3, t=1, _private=0):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^
    |

D417 Missing argument descriptions in the docstring for `test_missing_args_class_method`: `test`, `y`, `z`
   --> sections.py:449:9
    |
449 |     def test_missing_args_class_method(cls, test, x, y, z=3):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |

D417 Missing argument descriptions in the docstring for `test_missing_args_static_method`: `a`, `z`
   --> sections.py:468:9
    |
468 |     def test_missing_args_static_method(a, x, y, z=3, t=1):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |

D417 Missing argument description in the docstring for `test_incorrect_indent`: `y`
   --> sections.py:498:9
    |
498 |     def test_incorrect_indent(self, x=1, y=2):  # noqa: D207, D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^
    |
