crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D418_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D418 Function decorated with `@overload` shouldn't contain a docstring
  --> D.py:34:9
   |
34 |     def overloaded_method(self, a: str) -> str:
   |         ^^^^^^^^^^^^^^^^^
   |

D418 Function decorated with `@overload` shouldn't contain a docstring
  --> D.py:90:9
   |
90 |     def nested_overloaded_func(a: str) -> str:
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |

D418 Function decorated with `@overload` shouldn't contain a docstring
   --> D.py:110:5
    |
110 | def overloaded_func(a: str) -> str:
    |     ^^^^^^^^^^^^^^^
    |
