crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D419_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D419 Docstring is empty
  --> D.py:20:9
   |
20 |         """"""
   |         ^^^^^^
   |

D419 Docstring is empty
  --> D.py:74:5
   |
74 |     """ """
   |     ^^^^^^^
   |

D419 Docstring is empty
  --> D.py:80:9
   |
80 |         ''
   |         ^^
   |
