crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D420_D420_google.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D420 Section "Args" appears after section "Returns" but should be before it
  --> D420_google.py:36:5
   |
36 |     Args:
   |     ^^^^
   |

D420 Section "Returns" appears after section "Raises" but should be before it
  --> D420_google.py:47:5
   |
47 |     Returns:
   |     ^^^^^^^
   |

D420 Section "Args" appears after section "Raises" but should be before it
  --> D420_google.py:58:5
   |
58 |     Args:
   |     ^^^^
   |

D420 Section "Returns" appears after section "Raises" but should be before it
  --> D420_google.py:61:5
   |
61 |     Returns:
   |     ^^^^^^^
   |

D420 Section "Arguments" appears after section "Returns" but should be before it
   --> D420_google.py:106:5
    |
106 |     Arguments:
    |     ^^^^^^^^^
    |

D420 Section "Args" appears after section "Returns" but should be before it
   --> D420_google.py:155:5
    |
155 |     Args:
    |     ^^^^
    |

D420 Section "Args" appears after section "Returns" but should be before it
   --> D420_google.py:189:5
    |
189 |     Args:
    |     ^^^^
    |
