crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D420_D420_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D420 Section "Returns" appears after section "Notes" but should be before it
  --> D420_numpy.py:78:5
   |
78 |     Returns
   |     ^^^^^^^
   |

D420 Section "Returns" appears after section "Examples" but should be before it
  --> D420_numpy.py:91:5
   |
91 |     Returns
   |     ^^^^^^^
   |

D420 Section "Notes" appears after section "Examples" but should be before it
  --> D420_numpy.py:95:5
   |
95 |     Notes
   |     ^^^^^
   |

D420 Section "Warns" appears after section "Notes" but should be before it
   --> D420_numpy.py:117:5
    |
117 |     Warns
    |     ^^^^^
    |

D420 Section "Parameters" appears after section "Other Params" but should be before it
   --> D420_numpy.py:131:5
    |
131 |     Parameters
    |     ^^^^^^^^^^
    |

D420 Section "Attributes" appears after section "Methods" but should be before it
   --> D420_numpy.py:177:5
    |
177 |     Attributes
    |     ^^^^^^^^^^
    |

D420 Section "Returns" appears after section "Notes" but should be before it
   --> D420_numpy.py:222:5
    |
222 |     Returns
    |     ^^^^^^^
    |
