crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__all.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D100 Missing docstring in public module
--> all.py:1:1

D103 Missing docstring in public function
 --> all.py:1:5
  |
1 | def public_func():
  |     ^^^^^^^^^^^
  |

D101 Missing docstring in public class
 --> all.py:9:7
  |
9 | class PublicClass:
  |       ^^^^^^^^^^^
  |

D106 Missing docstring in public nested class
  --> all.py:10:11
   |
10 |     class PublicNestedClass:
   |           ^^^^^^^^^^^^^^^^^
   |
